--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -103,17 +103,6 @@
             </button>
         </div>
     </div>
-    <div class="hero__mountains hero__mountains_front">
-        <img
-            class="hero__mountains-image _desktop-only"
-            src="./assets/images/bg/mountains-front.webp"
-            alt=""
-        />
-        <img
-            class="hero__mountains-image _mobile-only"
-            src="./assets/images/bg/mountains-front-mobile.webp"
-            alt=""
-        />
-    </div>
+    <div class="hero__mountains hero__mountains_front"></div>
     <div class="hero__mountains hero__mountains_back"></div>
 </section>
