--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -3,6 +3,45 @@
     margin-bottom: 12.5rem;
     min-height: 110.6rem;
     overflow: hidden;
+    --y: -100%;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        background-size: cover;
+        background-repeat: no-repeat;
+        will-change: contents;
+        transform: translateY(var(--y)) translate3d(0, 0, 0);
+    }
+
+    &::after {
+        z-index: 5;
+        bottom: -1rem;
+        left: -8rem;
+        width: 105%;
+        height: 92%;
+        background-image: url(./assets/images/bg/mountains-front.webp);
+        @media (max-width: 48em) {
+            bottom: 0;
+            left: -8rem;
+            width: 112%;
+            height: 69%;
+        }
+    }
+
+    &::before {
+        top: 0;
+        left: -2rem;
+        width: 102%;
+        height: 93%;
+        background-image: url(./assets/images/bg/mountains-back.webp);
+        background-attachment: fixed;
+        background-position: 0 -29rem;
+        @media (max-width: 48em) {
+            background-position: -40rem -16rem;
+        }
+    }
 
     @media (max-width: 48em) {
         margin-bottom: 30rem;
@@ -146,59 +185,6 @@
 
         @media (max-width: 48em) {
             display: none;
-        }
-    }
-
-    // .hero__mountains
-
-    &__mountains {
-        position: absolute;
-        left: 0;
-        will-change: contents;
-
-        // .hero__mountains_front
-
-        &_front {
-            z-index: 5;
-            bottom: -1rem;
-            left: -8rem;
-            width: 105%;
-            height: 92%;
-
-            @media (max-width: 48em) {
-                bottom: 0;
-                left: -8rem;
-                width: 112%;
-                height: 69%;
-            }
-        }
-
-        // .hero__mountains_back
-
-        &_back {
-            top: 0;
-            left: -2rem;
-            width: 102%;
-            height: 93%;
-            background-image: url(./assets/images/bg/mountains-back.webp);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: 0 -29rem;
-
-            &::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: rgba(0, 0, 0, 0.2);
-            }
-
-            @media (max-width: 48em) {
-                background-position: -40rem -16rem;
-            }
         }
     }
 
