--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -103,6 +103,5 @@
             </button>
         </div>
     </div>
-    <div class="hero__mountains hero__mountains_front"></div>
-    <div class="hero__mountains hero__mountains_back"></div>
+    <div class="hero__bg"></div>
 </section>
