--- a/src/components/_routes.html
+++ b/src/components/_routes.html
@@ -9,6 +9,10 @@
                     <div class="routes__tabs-button">
                         <label for="tab-1">юг</label>
                         <div class="routes__tabs-content">
+                            <p class="routes__tabs-content-text">
+                                Оптимальный тип автомобиля для данного маршрута внедорожник Suzuki Jimny
+                            </p>
+
                             <figure class="routes__tabs-content-path">
                                 <img src="./assets/images/sections/routes/path-1.svg" alt="" />
                             </figure>
@@ -18,6 +22,10 @@
                     <div class="routes__tabs-button">
                         <label for="tab-2">север</label>
                         <div class="routes__tabs-content">
+                            <p class="routes__tabs-content-text">
+                                Оптимальный тип автомобиля для данного маршрута внедорожник Suzuki Jimny
+                            </p>
+
                             <figure class="routes__tabs-content-path">
                                 <img src="./assets/images/sections/routes/path-2.svg" alt="" />
                             </figure>
@@ -27,6 +35,10 @@
                     <div class="routes__tabs-button">
                         <label for="tab-3">запад</label>
                         <div class="routes__tabs-content">
+                            <p class="routes__tabs-content-text">
+                                Оптимальный тип автомобиля для данного маршрута внедорожник Suzuki Jimny4
+                            </p>
+
                             <figure class="routes__tabs-content-path">
                                 <img src="./assets/images/sections/routes/path-3.svg" alt="" />
                             </figure>
@@ -36,6 +48,10 @@
                     <div class="routes__tabs-button">
                         <label for="tab-4">восток</label>
                         <div class="routes__tabs-content">
+                            <p class="routes__tabs-content-text">
+                                Оптимальный тип автомобиля для данного маршрута внедорожник Suzuki Jimny4
+                            </p>
+
                             <figure class="routes__tabs-content-path">
                                 <img src="./assets/images/sections/routes/path-4.svg" alt="" />
                             </figure>
@@ -47,6 +63,8 @@
                     <figure class="routes__tabs-map">
                         <img src="./assets/images/sections/routes/routes-map.svg" alt="" />
                     </figure>
+
+                    <div class="routes__tabs-overlay"></div>
                 </div>
 
                 <ul class="routes__tabs-info-list">
@@ -54,9 +72,7 @@
                         <span style="--color: #ff6c01" class="routes__tabs-info-item-designation"> </span>
 
                         <div class="routes__tabs-info-item-text">
-                            <strong class="routes__tabs-info-item-title">
-                                Асфальтированные дороги
-                            </strong>
+                            <strong class="routes__tabs-info-item-title"> Асфальтированные дороги </strong>
 
                             <p class="routes__tabs-info-item-description">легковые и кроссоверы</p>
                         </div>
@@ -80,6 +96,138 @@
                         </div>
                     </li>
                 </ul>
+
+                <div class="routes__tabs-attractions">
+                    <span class="routes__tabs-attractions-title"> Достопримечательности </span>
+
+                    <p class="routes__tabs-attractions-text">
+
+                    </p>
+
+                    <div class="swiper routes__tabs-attractions-swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <figure>
+                                    <img
+                                        src="./assets/images/sections/routes/routes-slide-image.png"
+                                        alt=""
+                                    />
+                                </figure>
+
+                                <p class="routes__tabs-attractions-swiper-text">
+                                    На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
+                                    района . По пути Можно посетить места Смотровая площадка на Морской порт
+                                    города Корсаков и тд
+                                </p>
+                            </div>
+                            <div class="swiper-slide">
+                                <figure>
+                                    <img
+                                        src="./assets/images/sections/routes/routes-slide-image.png"
+                                        alt=""
+                                    />
+                                </figure>
+
+                                <p class="routes__tabs-attractions-swiper-text">
+                                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quia?
+                                </p>
+                            </div>
+                            <div class="swiper-slide">
+                                <figure>
+                                    <img
+                                        src="./assets/images/sections/routes/routes-slide-image.png"
+                                        alt=""
+                                    />
+                                </figure>
+
+                                <p class="routes__tabs-attractions-swiper-text">
+                                    asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, quis.
+                                </p>
+                            </div>
+                            <div class="swiper-slide">
+                                <figure>
+                                    <img
+                                        src="./assets/images/sections/routes/routes-slide-image.png"
+                                        alt=""
+                                    />
+                                </figure>
+
+                                <p class="routes__tabs-attractions-swiper-text">
+                                    На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
+                                    района . По пути Можно посетить места Смотровая площадка на Морской порт
+                                    города Корсаков и тд
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="routes__tabs-attractions-navigation">
+                        <button type="button" class="swiper-button-prev icon icon_white">
+                            <svg
+                                width="22"
+                                height="22"
+                                viewBox="0 0 22 22"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M21 11L1.83333 11M1.83333 11L11.8333 21M1.83333 11L11.8333 1"
+                                    stroke="white"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                            <svg
+                                width="22"
+                                height="22"
+                                viewBox="0 0 22 22"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M21 11L1.83333 11M1.83333 11L11.8333 21M1.83333 11L11.8333 1"
+                                    stroke="white"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <button type="button" class="swiper-button-next icon icon_white">
+                            <svg
+                                width="22"
+                                height="22"
+                                viewBox="0 0 22 22"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M1 11L20.1667 11M20.1667 11L10.1667 1M20.1667 11L10.1667 21"
+                                    stroke="white"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                            <svg
+                                width="22"
+                                height="22"
+                                viewBox="0 0 22 22"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M1 11L20.1667 11M20.1667 11L10.1667 1M20.1667 11L10.1667 21"
+                                    stroke="white"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
