add: hero parallax

--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -66,9 +66,6 @@
                     </a>
                 </li>
             </ul>
-            <div class="hero__car">
-                <img src="./assets/images/cars/9D257AFE-02FB.webp" alt="" class="hero__car-image" />
-            </div>
             <button data-scroll-to=".choose" type="button" class="hero__anchor icon icon_white">
                 <svg
                     width="22"
@@ -102,6 +99,13 @@
                 </svg>
             </button>
         </div>
+    </div>
+    <div class="hero__car">
+        <img src="./assets/images/cars/9D257AFE-02FB.webp" alt="" class="hero__car-image" />
+    </div>
+    <div class="hero__mountains">
+        <img class="_desktop-only" src="./assets/images/bg/mountains.webp" alt="">
+        <img class="_mobile-only" src="./assets/images/bg/mountains-mobile.webp" alt="">
     </div>
     <div class="hero__bg"></div>
 </section>
