--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -1,4 +1,44 @@
 .choose {
+    position: relative;
+    --groundOpacity: 0;
+
+    &::before {
+        content: '';
+        position: absolute;
+        z-index: 6;
+        top: -77.2rem;
+        left: 0;
+        width: 100%;
+        height: 62rem;
+        background-image: url(./assets/images/bg/ground.webp);
+        background-size: cover;
+        background-repeat: no-repeat;
+        opacity: var(--groundOpacity);
+
+
+        @media (max-width: 48em) {
+          top: -84.2rem;
+        }
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        z-index: 6;
+        top: -25.5rem;
+        left: 0;
+        width: 100%;
+        height: 13.5rem;
+        background: linear-gradient(0deg, rgb(25, 28, 32) 22%, rgba(255, 255, 255, 0) 99%);
+        opacity: var(--groundOpacity);
+
+        @media (max-width: 48em) {
+            top: -36.5rem;
+            height: 16.5rem;
+        }
+    }
+
+
     @media (max-width: 48em) {
         margin-bottom: 29rem;
     }
@@ -7,6 +47,7 @@
 
     &__container {
         position: relative;
+        z-index: 7;
         display: grid;
         grid-template-columns: 3fr 9fr;
 
