--- a/src/components/header.html
+++ b/src/components/header.html
@@ -70,7 +70,12 @@
         /></a>
         <div class="header__group">
             <a href="#" class="header__link txt">Контакты</a>
-            <button type="button" class="header__link header__link_lang txt">ru</button>
+            <div class="header__select-lang select-lang">
+                <select data-show-selection>
+                    <option value="1" >ru</option>
+                    <option value="2" selected>eng</option>
+                </select>
+            </div>
             <a href="tel:74242490725" class="header__tel"
                 ><span class="_desktop-only">+7 (4242) 490-725</span
                 ><span class="header__tel-icon icon">
