--- a/src/components/_choose.html
+++ b/src/components/_choose.html
@@ -268,6 +268,26 @@
                             />
                         </div>
                     </div>
+
+                    <div
+                      data-text="На данном авто, возможен выезд
+в районы с грунтовым покрытием"
+                      data-price="6 300"
+                      data-pledge="20 000"
+                      data-heading="toyota prado"
+                      class="choose__slide slide-choose swiper-slide"
+                    >
+                        <div data-tr="fadeIn" data-tr-speed="1.5s" class="slide-choose__image-wrap">
+                            <img
+                              data-tr="zoomout"
+                              data-tr-speed="1s"
+                              data-tr-delay="1s"
+                              src="./assets/images/cars/9D257GS-DG.webp"
+                              alt=""
+                              class="slide-choose__image"
+                            />
+                        </div>
+                    </div>
                 </div>
             </div>
             <div
